# CLI-AI-ASSISTANT

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  ACCESSIBILITY_ROADMAP.md  AUTO_UPDATE_GUIDE.md  AUTO_UPDATE_IMPLEMENTATION.md  BUG_FIXES_REPORT.md  COMPETITIVE_ENHANCEMENTS.md  FREE_MODELS_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_TEST_RESULTS.md  LICENSE  MANIFEST.in  PHASE1_COMPLETE.md  PUBLISHING_GUIDE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_NEW.md  ROCKET_CLI_GUIDE.md  SampleTrail.txt  Sample_trail2.txt  TESTING_AND_USER_GUIDE.md  TEST_RESULTS.md  demo_phase1.py  pyproject.toml  pytest.ini  rocket-cli.py  rocket_models.py  setup.py  setup_free_models.py  test_free_models.py  test_openai.py  test_openai_mock.py  test_phase1_enhancements.py  test_review_sample.py  test_rocket_cli.py
.github/workflows/: publish-pypi.yml
My_website/: package.json
Rocket/: __init__.py
Rocket/AGENT/: Context.py  Executor.py  Workflow.py  __init__.py
Rocket/CLI/: Main.py  __init__.py  commands.py  interactive.py  interactive_fixed.py  wizard.py
Rocket/GIT/: Pr_creator.py  __init__.py  manager.py
Rocket/LLM/: Client.py  Model.py  __init__.py
Rocket/MODES/: Agent_mode.py  Analyze_mode.py  Base.py  Debug_mode.py  Enhancement_mode.py  Read_mode.py  Register.py  Selectors.py  Think_mode.py  __init__.py
Rocket/TOOLS/: Base.py  __init__.py  list_directory.py  read_file.py  registry.py  run_command.py  search_files.py  write_file.py
Rocket/Utils/: Config.py  Log.py  __init__.py  custom_commands.py  deployer.py  error_handler.py  history.py  i18n.py  init.py  model_registry.py  model_updater.py  notifications.py  ollama_auto_setup.py  plugins.py  reviewer.py  smart_config.py  templates.py
TEST/: Test_modes.py  benchmark_performance.py  quick_test.py  rocket.py  run_tests.py  setup.py  test_checkpoint5.py  test_checkpoint6.py  test_llm.py  test_llm_async.py  test_performance_and_autosetup.py  test_providers.py  test_setup.py  test_write_reliability.py
apps/dashboard/: package-lock.json  (+1 more)
test-project/: package.json
(+36 files in other folders)
