[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocket-cli-ai"
version = "1.0.0"
description = "🚀 Free, Open-Source AI-Powered Coding Assistant - Local, Private, No API Keys Required"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rocket CLI Team", email = "rocket-cli@example.com"}
]
keywords = [
    "ai",
    "coding-assistant",
    "cli",
    "llm",
    "ollama",
    "gemini",
    "code-generation",
    "developer-tools",
    "free",
    "open-source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/CLI-AI-ASSISTANT"
Documentation = "https://github.com/yourusername/CLI-AI-ASSISTANT/blob/main/ROCKET_CLI_GUIDE.md"
Repository = "https://github.com/yourusername/CLI-AI-ASSISTANT"
Issues = "https://github.com/yourusername/CLI-AI-ASSISTANT/issues"

[project.scripts]
rocket = "Rocket.CLI.Main:main"

[tool.setuptools]
packages = ["Rocket", "Rocket.AGENT", "Rocket.CLI", "Rocket.GIT", "Rocket.LLM", "Rocket.LLM.providers", "Rocket.MODES", "Rocket.TOOLS", "Rocket.Utils"]

[tool.setuptools.package-data]
"*" = ["*.po", "*.pot"]
